--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>JS for React - 2022</title>
 </head>
 <body>
-    
+        <h1> Fernando Gutierrez</h1>
+
+        <script src="./js/01.js" ></script>
 </body>
 </html>
