Manipular HTML con JS

--- a/dom.html
+++ b/dom.html
@@ -7,7 +7,7 @@
     <title>DOM en HTML</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1 class="h11" style="text-align: center;">Manipulación del DOM</h1>
         <p class="pp" style="color: brown;"> Con Fernando Gutierrez</p>
     </header>
@@ -26,13 +26,13 @@
             <p>Node JS</p>
         </div>
 
-        <form>
+        <form class="formulario">
             <input type="text" placeholder="Escriba el nombre" id="nombre">
             <input type="password" placeholder="Escriba la clave" id="password">
             <input type="submit" value="Iniciar Sesión">
         </form>
     </div>
     
-    <script src="./js/22.js"></script>
+    <script src="./js/23.js"></script>
 </body>
 </html>
