Eventos del DOM - Submit

--- a/dom.html
+++ b/dom.html
@@ -26,13 +26,13 @@
             <p>Node JS</p>
         </div>
 
-        <form class="formulario">
+        <form id="formulario" class="formulario">
             <input type="text" placeholder="Escriba el nombre" id="nombre">
             <input type="password" placeholder="Escriba la clave" id="password">
             <input type="submit" value="Iniciar Sesión">
         </form>
     </div>
     
-    <script src="./js/25.js"></script>
+    <script src="./js/26.js"></script>
 </body>
 </html>
