--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
         <h1> Fernando Gutierrez</h1>
 
-        <script src="./js/28.js" type="module" ></script>
+        <script src="./js/29.js"></script>
 </body>
 </html>
